<resources>
    <string name="app_name">Pet</string>
    <string name="menu_pic">图集</string>
    <string name="liked">点赞</string>
    <string name="comment">评论</string>
    <string name="reward">打赏</string>
    <string name="share">分享</string>
    <string name="hot_comment">热门评论</string>
    <string name="look_at_more_comment">查看更多评论</string>
    <string name="already_liked">已赞</string>
    <string name="location">地区：</string>
    <string name="camera">相册</string>
    <string name="goto_taobao_title">跳转到淘宝</string>
    <string name="goto_taobao">检查到您已安装淘宝客户端，是否跳转到淘宝客户端？</string>

    <string name="auth_lg_wb">微博登录</string>
    <string name="auth_lg_qq">QQ登录</string>
    <string name="auth_lg_wx">微信登录</string>
</resources>
